--- a/en/code/tcc-rockstar/style.css
+++ b/en/code/tcc-rockstar/style.css
@@ -26,11 +26,22 @@ p#submit {
   display: block;
   text-align: center;
   width: 120px;
-  background-color: #ccc;
-  padding: 5px;
 }
 
 p#submit a {
   text-decoration: none;
   color: #000;
+  cursor: pointer;
+  background-color: #ccc;
+  border: none;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+}
+
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
